			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

22-Jul-2000
~~~~~~~~~~~
Added 'spring-loaded' directories. If you drag a file over a directory and
hold it there, the directory will spring open!

21-Jul-2000
~~~~~~~~~~~
In the path entry minibuffer, an exact match is favoured over any other
match. So, if you enter '.xsession' and press Return you'll get it, not
'.xsession-errors' or whatever!

The filer now clears APP_DIR from the environment so that child processes
don't get it. Fixed a bug which caused problems when using a small version
of the 'missing image' image.

19-Jul-2000
~~~~~~~~~~~
Creating a new directory now makes sure the display is updated.

18-Jul-2000
~~~~~~~~~~~
Prevent dragging from a pinboard selection to itself, or onto the desktop
background.

17-Jul-2000
~~~~~~~~~~~
Clicking on the root window works (button-1 clears the selection,
button-3 opens the pinboard menu). The pinboard can own the primary
selection, which means that you can select something and then paste
its name into another program.

Keys bound to menu entries are automatically saved when the filer quits.

16-Jul-2000
~~~~~~~~~~~
Changed the install script so that the CVS directories don't get installed.

The 'rox' script now just calls AppRun directly.
Panels can be created without starting a new copy of the filer.
The pinboard can be changed or removed by using --pinboard a second time.

Files can be given as arguments - they are opened as if they were clicked
on in a filer window (suggested by Alex Holden).  If no arguments are
given then the default is now the current directory (not your home
directory).

If you start the leafname in the path minibuffer with '.' then the Show
Hidden feature is temporarily turned on.

15-Jul-2000
~~~~~~~~~~~
Ctrl-clicking selects and unselects pinboard icons. Menu clicking
selects the icon clicked on while the menu is open. Pinned icons are
now updated when the pointer moves over them, if necessary.

14-Jul-2000
~~~~~~~~~~~