@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+23-Jul-2000
+~~~~~~~~~~~
+Added an option to control the spring-loading feature. Added tooltips
+to some of the options. Improved the rule for deciding whether to open
+a new window when you click on the toolbar buttons.
+
 22-Jul-2000
 ~~~~~~~~~~~
 Added 'spring-loaded' directories. If you drag a file over a directory and
